Add instructions to avoid heap space error