@@ -16,3 +16,8 @@ make test
 ## Tweets
 
 TODO
+
+## HeapSpace error with sbt
+```bash
+export SBT_OPTS="-Xms512M -Xmx3536M -Xss1M  -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -XX:MaxPermSize=724M"
+```
